@@ -30,7 +30,7 @@ class CP_Encryption {
 			$text      = $value;
 			$iv_size   = mcrypt_get_iv_size( MCRYPT_RIJNDAEL_256, MCRYPT_MODE_ECB );
 			$iv        = mcrypt_create_iv( $iv_size, MCRYPT_RAND );
-			$crypttext = mcrypt_encrypt( MCRYPT_RIJNDAEL_256, mb_substr( $this->security_key, 0, 20 ), $text, MCRYPT_MODE_ECB, $iv );
+			$crypttext = mcrypt_encrypt( MCRYPT_RIJNDAEL_256, mb_substr( $this->security_key, 0, 24 ), $text, MCRYPT_MODE_ECB, $iv );
 
 			return trim( $this->safe_b64encode( $crypttext ) );
 		} else {
@@ -47,7 +47,7 @@ class CP_Encryption {
 			$crypttext   = $this->safe_b64decode( $value );
 			$iv_size     = mcrypt_get_iv_size( MCRYPT_RIJNDAEL_256, MCRYPT_MODE_ECB );
 			$iv          = mcrypt_create_iv( $iv_size, MCRYPT_RAND );
-			$decrypttext = mcrypt_decrypt( MCRYPT_RIJNDAEL_256, mb_substr( $this->security_key, 0, 20 ), $crypttext, MCRYPT_MODE_ECB, $iv );
+			$decrypttext = mcrypt_decrypt( MCRYPT_RIJNDAEL_256, mb_substr( $this->security_key, 0, 24 ), $crypttext, MCRYPT_MODE_ECB, $iv );
 
 			return trim( $decrypttext );
 		} else {
