@@ -24,6 +24,13 @@ CHANGE LOG
 * Fixed issue with course order when Post Order Number is selected as an course order option
 * Fixed issue with login and signup popup links
 * Fixed issue with admin discussions pagination
+* Fixed instructors courses list properly with pagination (10 courses+)
+* Removed ping backs from courses (implementation on the feature request list).
+* Fixed conflicts with BuddyPress Groups.
+* Fixed issue with loading CoursePress styles on other admin pages.
+* Fixed issue with broken file downloads in Units (sites using PHP 5.6+).
+* Fixed issue where non-embeddable videos (e.g. some YouTube videos) shows nothing. Now it will show a clickable link.
+* Added ability to hide related videos for YouTube videos.
 
 = 1.2.5 =
 * Added additional hooks and filters for developers
